plugins {
    id 'org.springframework.boot' version '2.7.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}
apply plugin: 'io.spring.dependency-management'

group = 'ch.canaweb'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

configurations {
    providedRuntime
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.0'
    implementation 'org.springframework.boot:spring-boot-starter-security:2.7.0'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:2.7.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'com.google.cloud:spring-cloud-gcp-dependencies:3.3.0'
    implementation 'com.google.cloud:spring-cloud-gcp-starter-data-firestore:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.0'
    testImplementation 'io.projectreactor:reactor-test:3.4.18'
    testImplementation 'net.datafaker:datafaker:1.4.0'
}


tasks.named('test') {
    useJUnitPlatform()
}
